Update Tomcat to 9.0.56
also, remove deprecated maven idea plugin, unused log4j dependency definition and JVM parameter on cargo-maven3-plugin that is not understood by modern JVMs